<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@color/back_for_sign_in"
android:layout_height="match_parent"
tools:context=".presentation.sign_in_up.SignInFragment">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_25sdp"
    android:background="@drawable/sign_in_back">


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:text="@string/welcome"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/login"
        android:textColor="@color/color_hint"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="@id/text"/>


    <ImageView
        android:id="@+id/imageUsername"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:tint="@color/color_hint" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:background="@null"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="40dp"
        android:textColorHint="@color/color_hint"
        android:textStyle="bold"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageUsername"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintStart_toEndOf="@id/imageUsername"
        app:layout_constraintTop_toTopOf="@id/imageUsername"/>

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_hint"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"/>

    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_key"
        app:tint="@color/color_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider"/>


    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:background="@null"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textColorHint="@color/color_hint"
        app:layout_constraintBottom_toBottomOf="@id/imagePassword"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintStart_toEndOf="@id/imagePassword"
        app:layout_constraintTop_toTopOf="@id/imagePassword"
        android:minHeight="40dp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp" />

    <View
        android:id="@+id/view_divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_hint"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"/>

    <FrameLayout
        android:id="@+id/fl_sign_in"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:animateLayoutChanges="true"
        android:background="@drawable/item_back_transp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider2">

        <ImageView
            android:id="@+id/btnSignIn"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:background="@drawable/btn_back_sign_in"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_right"
            app:tint="@color/colorWhite"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </FrameLayout>

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginEnd="@dimen/_30sdp"
        android:textColor="@color/color_hint"
        android:textSize="@dimen/_13ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/fl_sign_in"
        app:layout_constraintBottom_toBottomOf="@id/fl_sign_in"
        app:layout_constraintStart_toStartOf="@id/text"/>


</androidx.constraintlayout.widget.ConstraintLayout>


<TextView
    android:id="@+id/textCreateNewAccount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create_new_accaunt"
    android:textColor="@color/color_hint"
    android:textSize="@dimen/_13ssp"
    android:textStyle="bold"
    android:padding="@dimen/_7sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_30sdp"
    app:layout_constraintBottom_toBottomOf="@id/fl_sign_in"
    app:layout_constraintStart_toStartOf="@id/text"
    app:layout_constraintTop_toTopOf="@id/fl_sign_in"
    app:layout_constraintEnd_toStartOf="@id/fl_sign_in"/>


</LinearLayout>